// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertMessage should default its severity when necessary 1`] = `
<div
  className="fade alert-content alert alert-warning show"
  dialog="Wondrous message!"
  role="alert"
>
  <div
    className="pgn__alert-message-wrapper"
  >
    <div
      className="alert-message-content"
    >
      Wondrous message!
    </div>
    <div
      className="pgn__alert-actions pgn__action-row"
    >
      <span
        className="pgn__action-row-spacer"
      />
      <button
        className="btn btn-tertiary btn-sm"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </div>
  </div>
</div>
`;

exports[`AlertMessage should render a userMessage element 1`] = `
<div
  className="fade alert-content alert alert-warning show"
  dialog={
    <span
      values={Object {}}
    >
      Wondrous message!
    </span>
  }
  role="alert"
>
  <div
    className="pgn__alert-message-wrapper"
  >
    <div
      className="alert-message-content"
    >
      <span
        values={Object {}}
      >
        Wondrous message!
      </span>
    </div>
    <div
      className="pgn__alert-actions pgn__action-row"
    >
      <span
        className="pgn__action-row-spacer"
      />
      <button
        className="btn btn-tertiary btn-sm"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </div>
  </div>
</div>
`;

exports[`AlertMessage should render a userMessage function 1`] = `
<div
  className="fade alert-content alert alert-warning show"
  dialog={
    <userMessage
      values={Object {}}
    />
  }
  role="alert"
>
  <div
    className="pgn__alert-message-wrapper"
  >
    <div
      className="alert-message-content"
    >
      Wondrous message!
    </div>
    <div
      className="pgn__alert-actions pgn__action-row"
    >
      <span
        className="pgn__action-row-spacer"
      />
      <button
        className="btn btn-tertiary btn-sm"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </div>
  </div>
</div>
`;
